# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.24

  - WL#14453, Pluggable authentication: new default behavior & user-less authentications.

  - WL#14392, Improve timeout error messages [classic].

  - WL#14202, XProtocol: Support connection close notification.

Version 8.0.23

  - Fix for Bug#21789378, FORCED TO SET SERVER TIMEZONE IN CONNECT STRING.

  - Fix for Bug#95644 (30573281), JDBC GETDATE/GETTIME/GETTIMESTAMP INTERFACE BEHAVIOR CHANGE AFTER UPGRADE 8.0.

  - Fix for Bug#94457 (29402209), CONNECTOR/J RESULTSET.GETOBJECT( ..., OFFSETDATETIME.CLASS ) THROWS.

  - Fix for Bug#76775 (20959249), FRACTIONAL SECONDS IN TIME VALUES ARE NOT AVAILABLE VIA JDBC.

  - Fix for Bug#99013 (31074051), AN EXTRA HOUR GETS ADDED TO THE TIMESTAMP WHEN SUBTRACTING INTERVAL 'N' DAYS.

  - Fix for Bug#98695 (30962953), EXECUTION OF "LOAD DATA LOCAL INFILE" COMMAND THROUGH JDBC FOR DATETIME COLUMN.

  - Fix for Bug#101413 (32099505), JAVA.TIME.LOCALDATETIME CANNOT BE CAST TO JAVA.SQL.TIMESTAMP.

  - Fix for Bug#101242 (32046007), CANNOT USE BYTEARRAYINPUTSTREAM AS ARGUMENTS IN PREPARED STATEMENTS ANYMORE.
    Thanks to Martynas Puronas for his contribution.

  - WL#14274, Support for authentication_ldap_sasl_client(SCRAM-SHA-256) authentication plugin.

  - WL#14206, Support for authentication_ldap_sasl_client(GSSAPI) authentication plugin.

  - WL#14207, Replace language in APIs and source code/docs.

Version 8.0.22

  - Fix for Bug#98667 (31711961), "All pipe instances are busy" exception on multiple connections to named Pipe.

  - Fix for Bug#96309 (31699357), MultiHost in loadbalance may lead to a TPS reduction during a quick switch.

  - Fix for Bug#99076 (31083755), Unclear exception/error when connecting with jdbc:mysql to a mysqlx port.

  - Fix for Bug#96870 (30304764), Contribution: Allow to disable AbandonedConnectionCleanupThread completely.
    Thanks to Andrey Turbanov for his contribution.
